# -*- sh -*-

# -------------------------------------------------
# CHANGELOG - multi-chan-fit.py
# -------------------------------------------------

# Key is:
# [+] added
# [-] removed
# [~] changed/fixed
# [V] version change
# ====================================================================


# 2017-11-15
# --------------------------------------------------------------------

# ~ set same activity and bounds for C6 and C7 testing
# ~ tweaked a bunch of fit scalings, bounds, results
# + adding in lsveto as a global fit component
# ~ trimmed out extra debug code that's not needed anymore
# + fixed the scaling bug


# 2017-11-07
# --------------------------------------------------------------------
# ~ changes to extracting the fit results
# ~ changes to setting the fit bounds
# ~ changes to building the fitting signal object
# ~ changes to plotting layout
# ~ many changes to accomodate the global fitting structure
# + new 900 series backgrounds files
# V switch to branch 90


# 2017-10-31
# --------------------------------------------------------------------
# ~ changed to file handling structure of join80.py
# ~ updateBkgsFile70() now sets lower/upper bounds to 0.1 and 10
# + added getInfo80() so I can select which xstals to build
# ~ smearing C8 hi energy resolution more
# + added resol80() and buildMC80()


# 2017-10-30
# --------------------------------------------------------------------
# ~ i screwed up the high energy alpha cuts, i need to reprocess data
# ~ fix cutsBDT80() to include the alpha cut
# ~ ignore signals with 0 entries
# ~ fixed some initializations that used a list of lists


# 2017-10-25
# --------------------------------------------------------------------
# + now have data build v00-04-03 with new calibs


# 2017-10-24
# --------------------------------------------------------------------
# ~ fixed a bug when getting run duration from a rootfile


# 2017-10-23
# --------------------------------------------------------------------