@@ -6,10 +6,11 @@
 # 
 # Works with v80 and later versions
 # 
-# version: 2017-10-31
+# version: 2017-11-16
 # 
 # Change Log (key == [+] added, [-] removed, [~] changed)
 #---------------------------------------------------------------------
+# ~ tweak getInfo80() to be compatible with no activity error
 # + added getInfo80() so I can select which xstals to build
 # ~ smearing C8 hi energy resolution more
 # + added resol80() and buildMC80()
@@ -161,7 +162,8 @@ def getInfo80(line, freuse=0, fchans=0, fxstals=[]):
         info['erro'] = float(bits[8])
 
         ### fit bounds
-        info['fbnd'] = [float(bits[9]), float(bits[10])]
+        #info['fbnd'] = [float(bits[9]), float(bits[10])]
+        info['fbnd'] = [float(bits[-3]), float(bits[-2])]
 
         ### build the histo key
         key  = 'x'+str(info['xstl'])
